[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SettingsPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MainMenu.tscn" type="PackedScene" id=3]

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Settings" parent="." instance=ExtResource( 2 )]

[node name="Main" parent="." instance=ExtResource( 3 )]
[connection signal="backButton" from="Settings" to="." method="_on_Settings_backButton"]
[connection signal="playPressed" from="Main" to="." method="_on_Main_playPressed"]
[connection signal="settingPressed" from="Main" to="." method="_on_Main_settingPressed"]
